k8s/svc-webapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  labels:
    app: listo
    tier: webapp
spec:
  # comment or delete the following line if you want to use a LoadBalancer
  type: LoadBalancer
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  # type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: listo
    tier: webapp
