k8s/webapp-v2.yaml
##################################################################################################
# Webapp service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: webapp
  labels:
    app: webapp
    service: webapp
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: webapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-v1
  labels:
    app: webapp
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
      version: v1
  template:
    metadata:
      labels:
        app: webapp
        version: v1
    spec:
      # serviceAccountName: bookinfo-webapp
      containers:
      - name: webapp
        image: docker.io/cmwylie19/listo-webapp:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-v2
  labels:
    app: webapp
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
      version: v2
  template:
    metadata:
      labels:
        app: webapp
        version: v2
    spec:
      # serviceAccountName: bookinfo-webapp
      containers:
      - name: webapp
        image: docker.io/cmwylie19/listo-webapp:dark
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
