k8s/webapp.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: webapp
#   labels:
#     app: webapp
#     service: webapp
# spec:
#   ports:
#     - port: 3000
#       name: http
#   selector:
#     app: webapp

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webapp
  name: webapp
  namespace: default
spec:
  clusterIP: 10.4.8.25
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 32115
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: webapp
  sessionAffinity: None
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webapp
  name: webapp
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: webapp
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: webapp
    spec:
      containers:
      - image: docker.io/cmwylie19/listo-webapp:latest
        imagePullPolicy: Always
        name: listo-webapp
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
