k8s/route.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-mesh
  namespace: casewylie
spec:
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    deploymentconfig: service-mesh
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: service-mesh
  namespace: casewylie
spec:
  host: service-mesh-casewylie.apps.cluster-6285.6285.sandbox447.opentlc.com
  port:
    targetPort: 3000-tcp
  to:
    kind: Service
    name: service-mesh
    weight: 100
  wildcardPolicy: None
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
    app.kubernetes.io/instance: service-mesh
  name: service-mesh
  namespace: casewylie
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    deploymentconfig: service-mesh
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deploymentconfig: service-mesh
    spec:
      containers:
      - image: docker.io/cmwylie19/service-mesh@sha256:29fce41e8da7e465548a133450b42acd1fd8638b00fea31dda76ad648c7cf671
        imagePullPolicy: Always
        name: service-mesh
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - service-mesh
      from:
        kind: ImageStreamTag
        name: service-mesh:latest
        namespace: casewylie
    type: ImageChange
